--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Byte-compiled / optimized / DLL files
+
 __pycache__/
+.DS_Store
+.vscode
 *.py[cod]
 *$py.class
 
@@ -55,32 +58,12 @@ cover/
 *.mo
 *.pot
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
 # Scrapy stuff:
 .scrapy
 
 # Sphinx documentation
 docs/_build/
 
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
